--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ select {
     box-shadow: 3px 3px 3px var(--blue);
 } */
 .loginBg {
-    background-image: url(img/Desktop_tcm1010-38974.jpg); 
+    background-image: URL(../img/Desktop_tcm1010-38974.jpg); 
     /*background-image: URL(../img/SABIC-desktop-hero-SABIC-HQ_tcm1010-30958.jpg);*/
     background-position: center;
     background-repeat: no-repeat;
